# docker-api-101

./: .env.example  README.md  docker-compose.yml
api/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  run-dev.sh  update.sh
api/.devcontainer/: devcontainer.json
api/app/: main.py
api/app/models/: __init__.py  authors.py  posts.py
api/app/routers/: __init__.py  api_test.py  authors.py  posts.py
api/db-migration/: env.py
api/db-migration/versions/: 4c530140a3d9_init.py
frontend/: Dockerfile  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js
